tests/baselines/reference/privateNameInInExpressionUnused(target=esnext).errors.txt
privateNameInInExpressionUnused.ts(2,5): error TS6133: '#unused' is declared but its value is never read.
privateNameInInExpressionUnused.ts(5,5): error TS99999: Function was inferred to be a type guard


==== privateNameInInExpressionUnused.ts (2 errors) ====
    class Foo {
        #unused: undefined; // expect unused error
        ~~~~~~~
!!! error TS6133: '#unused' is declared but its value is never read.
        #brand: undefined; // expect no error
    
        isFoo(v: any): v is Foo {
        ~~~~~
!!! error TS99999: Function was inferred to be a type guard
            // This should count as using/reading '#brand'
            return #brand in v;
        }
    }
    